--- a/event.html
+++ b/event.html
@@ -17,9 +17,9 @@ gtag("config", "G-269Q88TKX4");
 function trackCTA(){
 	// 送出事件紀錄
 	gtag("event", "點擊", {
-		"event_category":"CTA",
-		"event_label":"頁面標題",
-		"value": 1
+		"event_category":"購買",
+		"event_label":"oder",
+		"value": 20
 	});
 	alert("Event Sent!");
 }
@@ -27,6 +27,6 @@ function trackCTA(){
 </head>
 <body>
 	追蹤網頁瀏覽次數
-	<button onclick="trackCTA();">Call to Action</button>
+	<button onclick="trackCTA();">call to action</button>
 </body>
 </html>
