--- a/event.html
+++ b/event.html
@@ -18,7 +18,7 @@ function trackCTA(){
 	// 送出事件紀錄
 	gtag("event", "點擊", {
 		"event_category":"購買",
-		"event_label":"oder",
+		"event_label":"order",
 		"value": 20
 	});
 	alert("Event Sent!");
